bug scrollbars resolu

--- a/wtf-frontend/src/app/faq/faq.component.css
+++ b/wtf-frontend/src/app/faq/faq.component.css
@@ -1,5 +1,5 @@
 .faq{
-  padding: 5%;
+  padding: 20%;
 }
 
 .gros-Titre{
