--- a/wtf-frontend/src/app/footer/footer.component.css
+++ b/wtf-frontend/src/app/footer/footer.component.css
@@ -1,6 +1,15 @@
 .footer {
+ 
+  background-color: black;
+  color: white;
+  clear: both;
+  text-align: center;
+  padding: 1px;
   width: 100%;
-  height: 2rem;
+  position: absolute; 
+  bottom: 0px;
+  left: 0px;
+  box-sizing: border-box;
   flex-shrink: 0;
 }
 
@@ -27,8 +36,11 @@ img{
   margin-right: -0.25em;;
 }
 
-.mat-toolbar{
+.mat-toolbar {
   background-color: rgb(93,84,164);
+  
+
+
 }
 
 @media (max-width: 600px) {
@@ -36,3 +48,5 @@ img{
     display: none;
   }
 }
+
+
